update default meta value

--- a/dialogs/settings.html
+++ b/dialogs/settings.html
@@ -420,12 +420,12 @@
             }
 
             function editEditorMeta() {
-                const defaultMeta = `title: \${getFileTitle(index) || "New document"}
-authors: 
+                const defaultMeta = `title: ~{1:\${getFileTitle(index) || "New document"}}
+authors: ~{2:Author name}
 date: \${strftime(Settings.getSetting("dateFormat", "%Y/%m/%d %H:%M"))}
-tags: uncategorized
-description: 
-color: 
+tags: ~{3:Uncategorized}
+description: ~{4:No description provided}
+color: \${'#'+Math.floor(Math.random()*16777215).toString(16).padStart(6,'0')}
 banner: cohesion/banners/1.png
 icon: `;
                 const savedMeta = Settings.getSetting('editorMeta', defaultMeta);
