fixed emoji banners
fixed critical bug making banner images spit base64 code on rendered output

--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                     'rubyText', // ruby text support
                     'progress', // progress bar support
                     'keys', // kbd support
-                    'footnotes', // footnotes support
+                    'footnotes' // footnotes support
                 ],
             });
 
