--- a/index.html
+++ b/index.html
@@ -344,6 +344,33 @@
                 document.addEventListener("keydown", landingKeyHandler);
             }
 
+            // download file from url param f
+            if (urlParams.get('f')) {
+                const id = urlParams.get('f');
+
+                const cleanUrl = new URL(window.location.href);
+                cleanUrl.searchParams.delete('f');
+                window.history.replaceState({}, "", cleanUrl);
+
+                fetch(`https://tempfiles.flarowom.workers.dev/${id}`)
+                    .then(async res => {
+                        if (!res.ok) return;
+
+                        const text = await res.text();
+
+                        const title = getFileTitleFromText(text);
+                        const canImport = await promptConfirm(
+                            `Would you like to import "${title}" into your editor?`
+                        );
+
+                        if (canImport) {
+                            createFile(text);
+                            togglePreview('read');
+                        }
+                    })
+                    .catch(console.error);
+            }
+
             //
             // EDITOR
             //
@@ -1521,6 +1548,36 @@
                 Settings.setSetting('lastLogin', now.toISOString());
                 console.log("Updated lastLogin to:", now.toISOString());
             })();
+
+            async function shareFileAndShowQR() {
+                try {
+                    const id = await shareFile(index);
+                    const link = `https://flarom.github.io/cohesion?f=${id}`; // hardcoded url hell yeah
+
+                    const qrUrl = createQRCode(link, 240);
+
+                    const html = `
+                        <div style="text-align:center; padding:10px;">
+                            <p style="margin-bottom:5px;">
+                                Scan to import this document:
+                            </p>
+                            <img src="${qrUrl}" alt="QR Code" style="width:240px; height:240px; border-radius:8px;" />
+                            <p style="margin-top:12px; font-size:0.9rem; opacity:0.8;">
+                                <a href="${link}" target="_blank">${link}</a>
+                            </p>
+                            <p style="opacity:75%">
+                                File will be deleted after 2 hours.
+                            </p>
+                        </div>
+                    `;
+
+                    promptMessage(html, true, false);
+
+                } catch (err) {
+                    console.error("QR share failed:", err);
+                    promptMessage("<p>Failed to share this file.</p>", true, false);
+                }
+            }
         </script>
     </body>
 </html>
