experimenting with sharing functions

--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@
                             Print
                         </button>
                         <hr>
+                        <button class="text-button" onmouseup="shareFileAndShowQR()">
+                            Share
+                        </button>
+                        <hr>
                         <button class="text-button" onmouseup="searchDocuments(); hideAllMenus();">
                             Search documents
                             <kbd>Ctrl+K</kbd>
