--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             Print
                         </button>
                         <hr>
-                        <button class="text-button" onmouseup="shareFileAndShowQR()">
+                        <button class="text-button" onmouseup="showToast('Please wait...', 'broadcast_on_personal');shareFileAndShowQR()">
                             Share
                         </button>
                         <hr>
@@ -1556,19 +1556,17 @@
             async function shareFileAndShowQR() {
                 try {
                     const id = await shareFile(index);
-                    const link = `https://flarom.github.io/cohesion?f=${id}`; // hardcoded url hell yeah
+                    const link = `https://flarom.github.io/cohesion?f=${id}`;
 
                     const qrUrl = createQRCode(link, 240);
 
                     const html = `
                         <div style="text-align:center; padding:10px;">
-                            <p style="margin-bottom:5px;">
-                                Scan to import this document:
-                            </p>
-                            <img src="${qrUrl}" alt="QR Code" style="width:240px; height:240px; border-radius:8px;" />
-                            <p style="margin-top:12px; font-size:0.9rem; opacity:0.8;">
-                                <a href="${link}" target="_blank">${link}</a>
-                            </p>
+                            <img src="${qrUrl}" alt="QR Code" style="width:240px; height:240px; border-radius:8px; border: 8px solid white" />
+                            <div style="margin-top:12px; display: flex; align-items: center; gap: 6px;">
+                                <input id="qr-link-field" type='text' style='text-align:center;margin:0;width:100%' value='${link}'/>
+                                <button id="qr-copy-btn" class='icon-button'>content_copy</button>
+                            </div>
                             <p style="opacity:75%">
                                 File will be deleted after 2 hours.
                             </p>
@@ -1577,9 +1575,23 @@
 
                     promptMessage(html, true, false);
 
+                    setTimeout(() => {
+                        const input = document.getElementById("qr-link-field");
+                        const btn = document.getElementById("qr-copy-btn");
+
+                        if (btn && input) {
+                            btn.addEventListener("click", () => {
+                                showToast("Copied to clipboard", "check")
+                                input.select();
+                                input.setSelectionRange(0, 99999);
+                                navigator.clipboard.writeText(input.value);
+                            });
+                        }
+                    }, 50);
+
                 } catch (err) {
                     console.error("QR share failed:", err);
-                    promptMessage("<p>Failed to share this file.</p>", true, false);
+                    showToast("Failed to share this file", "error");
                 }
             }
         </script>
