--- a/index.html
+++ b/index.html
@@ -1569,7 +1569,7 @@
                         <div style="text-align:center; padding:10px;">
                             <img src="${qrUrl}" alt="QR Code" style="width:240px; height:240px; border-radius:8px; border: 8px solid white" />
                             <div style="margin-top:12px; display: flex; align-items: center; gap: 6px;">
-                                <input id="qr-link-field" type='text' style='text-align:center;margin:0;width:100%' value='${link}'/>
+                                <input id="qr-link-field" readonly='true' type='text' style='text-align:center;margin:0;width:100%' value='${link}'/>
                                 <button id="qr-copy-btn" class='icon-button'>content_copy</button>
                             </div>
                             <p style="opacity:75%">
