fixed broken link
i messed up

--- a/share.html
+++ b/share.html
@@ -95,8 +95,8 @@
     </div>
     <header>
         <div>
-            <a href="../index.html" style="display: inline-flex; align-items: center; color: var(--text-color); text-decoration: none;">
-                <img src="../cohesion/favicon.svg" alt="" width="48">
+            <a href="index.html" style="display: inline-flex; align-items: center; color: var(--text-color); text-decoration: none;">
+                <img src="cohesion/favicon.svg" alt="" width="48">
                 <h2 translate="no" class="header-text">Cohesion</h2>
             </a>
         </div>
