update shared card image

--- a/share.html
+++ b/share.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document on Cohesion</title>
-    <link rel="shortcut icon" href="../cohesion/favicon.svg" type="image/x-icon" />
+    <link rel="shortcut icon" href="cohesion/favicon.svg" type="image/x-icon" />
     
     <!-- Primary Meta Tags -->
     <meta name="title" content="Document on Cohesion">
@@ -19,14 +19,14 @@
     <meta property="og:url" content="https://flarom.github.io/cohesion/share">
     <meta property="og:title" content="Document on Cohesion">
     <meta property="og:description" content="Read Markdown Documents without distractions.">
-    <meta property="og:image" content="https://flarom.github.io/cohesion/cohesion/cards/editor.png">
+    <meta property="og:image" content="https://flarom.github.io/cohesion/cohesion/cards/shared.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://flarom.github.io/cohesion/share">
     <meta property="twitter:title" content="Document on Cohesion">
     <meta property="twitter:description" content="Read Markdown Documents without distractions.">
-    <meta property="twitter:image" content="https://flarom.github.io/cohesion/cohesion/cards/editor.png">
+    <meta property="twitter:image" content="https://flarom.github.io/cohesion/cohesion/cards/shared.png">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://flarom.github.io/cohesion/share">
